promjenjena imena projekata
Signed-off-by: mkova <mario.kovacevic@fer.hr>

--- a/ITJobsApp/ITJobsApp.DLL/ITJobsApp.DLL.csproj
+++ b/ITJobsApp/ITJobsApp.DLL/ITJobsApp.DLL.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ITJobs.Model\ITJobs.Model.csproj" />
+    <ProjectReference Include="..\ITJobs.Model\ITJobsApp.Model.csproj" />
   </ItemGroup>
 
 </Project>
